# gitea-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  mcp_config.json  pyproject.toml  test_docker.py
src/datapilot_gitea_mcp/: server.py
src/datapilot_gitea_mcp/scripts/: compare_branches.ps1  compare_branches.sh
